omni/tests/goldens/types/undefined_ident_01.err
tests/goldens/types/undefined_ident_01.omni:1:19: error: undefined identifier "missing1"
  let result1:int = missing1
                    ^~~ hint: declare the name before using it
