omni/tests/goldens/types/undefined_ident_01.omni
let result1:int = missing1
